--- a/assets/stylish/mixins/_global.scss
+++ b/assets/stylish/mixins/_global.scss
@@ -2,28 +2,108 @@
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
-@mixin move($margin:false, $padding:false, $border_width:false, $border_style:false, $border_color:false){
+//Margin
+@mixin move($margin_top:false, $margin_bottom:false, $small:false, $large:false){
 
-  @if $margin{
-    &.move_small{ margin-bottom: $margin/2}
-    &.move_large{ margin-bottom: $margin*2}
+  //Margin top
+  @if $margin_top{
+    margin-top: $margin_top;
+
+    @if $small{
+      &.move_small_top{ margin-top: $margin_top/$small}
+    }
+    @if $large{
+      &.move_large_top{ margin-top: $margin_top*$large }
+    }
+    &.move_clear_top,
+    &.move_clean_top{ margin-top: 0; }
+  }
+
+  //Margin bottom
+  @if $margin_bottom{
+
+    margin-bottom: $margin_bottom;
+
+    @if $small{
+      &.move_small_bottom{ margin-bottom: $margin_bottom/$small }
+    }
+    @if $large{
+      &.move_large_bottom{ margin-bottom: $margin_bottom*$large }
+    }
+    &.move_clear_bottom,
+    &.move_clean_bottom{ margin-bottom: 0; }
+  }
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
+//Padding
+@mixin move_in($padding_top:false, $padding_bottom:false, $small:false, $large:false){
+  //Padding top
+  @if $padding_top{
+
+    padding-top: $padding_top;
+
+    @if $small{
+      &.move_in_small_top{ padding-top: $padding_top/$small }
+    }
+    @if $large{
+      &.move_in_large_top{ padding-top: $padding_top*$large }
+    }
+    &.move_in_clear_top,
+    &.move_in_clean_top{ padding-top: 0;}
+  }
+
+  // Padding bottom
+  @if $padding_bottom{
+
+    padding-bottom: $padding_bottom;
+
+    @if $small{
+      &.move_in_small_bottom{ padding-bottom: $padding_bottom/$small }
+    }
+    @if $large{
+      &.move_in_large_bottom{ padding-bottom: $padding_bottom*$large }
+
+    }
+    &.move_in_clear_bottom,
+    &.move_in_clean_bottom{ padding-bottom: 0;}
+  }
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
+//Border
+@mixin border($border_position:false, $border_width:false, $border_style:false, $border_color:false){
+  @if $border_position AND $border_width AND $border_style AND $border_color{
+    &.border_#{$border_position}{ border-#{$border_position}: $border_width $border_style $border_color; }
+  }
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
+//Height
+@mixin height($height:false, $small:false, $large:false){
+
+  @if $height{
+
+    height: $height;
+
+    @if $small{
+      &.move_small{ height: $height/$small }
+    }
+
+    @if $large{
+      &.move_large{ height: $height*$large }
+    }
+
     &.move_clear,
-    &.move_clean{ margin-bottom: 0; }
-  }
-
-  @if $padding{
-    &.move_in_small{ padding-bottom: $padding/2 }
-    &.move_in_large{ padding-bottom: $padding*2 }
-    &.move_in_clear,
-    &.move_in_clean{ padding-bottom: 0;}
-  }
-
-  @if $border_width and $border_style and $border_color{
-    &.border_bottom{ border-bottom: $border_width $border_style $border_color; }
-  }
-
-  @if $margin and $padding{
-    &.clean,
-    &.clear{ margin-bottom: 0; padding-bottom: 0;}
+    &.move_clean{height: 0}
   }
 }
